fix button, improve button visibility

--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@ html, body {
 }
 
 body {
-    background-image: linear-gradient(0deg, #000547 0%, #2756C3 50%, #000547 100%);
+    background-image: linear-gradient(0deg, #000547 0%, #1C4CBD 50%, #000547 100%);
     background-position: top;
     background-size: auto 100vh;
 }
